# xdg-desktop-portal-amber

./: .gitignore  CMakeLists.txt  index.html
data/: 51-jolla-ui-xdg-desktop.conf  CMakeLists.txt  amber.portal  lipstick-portals.conf  org.freedesktop.impl.portal.desktop.amber.desktop.in  org.freedesktop.impl.portal.desktop.amber.service.in  org.freedesktop.impl.portal.desktop.sailfish.desktop.in  org.freedesktop.impl.portal.desktop.sailfish.service.in  portals.conf  sailfish.portal  xdg-desktop-portal-amber.service.in  xdg-desktop-portal-pre.service.in  xdg-desktop-portal-sailfish.conf  xdg-desktop-portal-sailfish.service.in  xdg-desktop.conf
data/collectd/: CMakeLists.txt  xdg-desktop-portal.conf
data/polkit/actions/: org.freedesktop.portal.desktop.policy
data/sailjail/: CMakeLists.txt  XDGPortalTemplate.permission.template
data/sailjail/permissions/: XDGPortal.permission  XDGPortalEmail.permission  XDGPortalFileChooser.permission  XDGPortalScreenshot.permission  XDGPortalWallpaper.permission
data/systemd-overrides/: CMakeLists.txt
data/systemd-overrides/xdg-permission-store.service.d/: 50-sailfishos.conf
doc/: Outlook_and_Challenges.md  README_Testing.md  SailfishOS_Iface_Table.md  doc.pro  index.qdoc  test.sh  xdg-desktop-portal-amber.qdocconf  xdg-desktop-portal-sailfish.qdocconf
doc/html/: amber-accessportal-members.html  amber-accessportal.html  amber-desktopportal-members.html  amber-desktopportal.html  amber-emailportal-members.html  amber-emailportal.html  amber-filechooserportal-members.html  amber-filechooserportal.html  amber-lockdownportal-members.html  amber-lockdownportal.html  amber-screenshotportal-colorrgb-members.html  amber-screenshotportal-colorrgb.html  amber-screenshotportal-members.html  amber-screenshotportal.html  amber-settingsportal-fdoconfkeys-members.html  amber-settingsportal-fdoconfkeys.html  amber-settingsportal-members.html  amber-settingsportal.html  amber-wallpaperportal-members.html  amber-wallpaperportal.html  amber.html  index.html  org-freedesktop-impl-portal-desktop-amber-ui-qmlmodule.html  org-freedesktop-impl-portal-desktop-sailfish-ui-qmlmodule.html  qml-filepickerdialog-members.html  qml-filepickerdialog.html  qml-main-ui-application-members.html  qml-main-ui-application.html  qml-org-freedesktop-impl-portal-desktop-amber-ui-confirmationdialog-members.html  qml-org-freedesktop-impl-portal-desktop-amber-ui-confirmationdialog.html  qml-org-freedesktop-impl-portal-desktop-amber-ui-filepickerdialog-members.html  qml-org-freedesktop-impl-portal-desktop-amber-ui-filepickerdialog.html  qml-org-freedesktop-impl-portal-desktop-amber-ui-xdg-desktop-portal-amber-ui-members.html  qml-org-freedesktop-impl-portal-desktop-amber-ui-xdg-desktop-portal-amber-ui.html  qml-org-freedesktop-impl-portal-desktop-sailfish-ui-confirmationdialog-members.html  qml-org-freedesktop-impl-portal-desktop-sailfish-ui-confirmationdialog.html  qml-org-freedesktop-impl-portal-desktop-sailfish-ui-filepickerdialog-members.html  qml-org-freedesktop-impl-portal-desktop-sailfish-ui-filepickerdialog.html  qml-org-freedesktop-impl-portal-desktop-sailfish-ui-xdg-desktop-portal-sailfish-ui-members.html  qml-org-freedesktop-impl-portal-desktop-sailfish-ui-xdg-desktop-portal-sailfish-ui.html  (+62 more)
doc/src/: portal-settings-namespaces.qdoc
icons/: CMakeLists.txt
qml/: CMakeLists.txt  ConfirmationDialog.qml  FilePickerDialog.qml  app.cpp  org.freedesktop.impl.portal.desktop.amber.ui.service  org.freedesktop.impl.portal.desktop.sailfish.ui.service  org.freedesktop.impl.portal.desktop.sailfish.ui.service.in  xdg-desktop-portal-amber-ui.desktop  xdg-desktop-portal-amber-ui.qml  xdg-desktop-portal-sailfish-ui.desktop  xdg-desktop-portal-sailfish-ui.desktop.in  xdg-desktop-portal-sailfish-ui.qml
rpm/: xdg-desktop-portal-amber.spec  xdg-desktop-portal-sailfish.spec
src/: CMakeLists.txt  access.cpp  access.h  account.cpp  account.h  desktopportal.cpp  desktopportal.h  email.cpp  email.h  filechooser.cpp  filechooser.h  lockdown.cpp  lockdown.h  main.cpp  permissionstore.cpp  permissionstore.h  screenshot.cpp  screenshot.h  settings.cpp  settings.h  wallpaper.cpp  wallpaper.h  xdg-desktop-portal-sailfish.cpp  xdptypes.h
